--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,4 +2,7 @@
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: none;
+  border: none;
+  outline: none;
 }
