--- a/components/itemCard/itemCard.module.css
+++ b/components/itemCard/itemCard.module.css
@@ -16,6 +16,11 @@
 
 .itemCardName {
   grid-row: 2;
+
+  text-align: center;
+
+  font-weight: 700;
+  font-size: 18px;
 }
 
 .itemCardButton {
@@ -23,5 +28,10 @@
 
   width: 100%;
 
+  padding-block: 5px;
+
   background-color: black;
+
+  text-align: center;
+  color: white
 }
