--- a/components/itemCard/itemCard.module.css
+++ b/components/itemCard/itemCard.module.css
@@ -1,7 +1,10 @@
 .itemCard {
   height: max-content;
   width: 300px;
+
   display: grid;
+  gap: 10px;
+
   align-items: center;
   justify-items: center;
 }
@@ -19,7 +22,6 @@
 
   text-align: center;
 
-  font-weight: 700;
   font-size: 18px;
 }
 
