--- a/components/itemCard/itemCard.module.css
+++ b/components/itemCard/itemCard.module.css
@@ -10,6 +10,11 @@
 }
 
 .itemCardImage {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+
   width: 200px;
   height: 200px;
   object-fit: cover;
