--- a/components/itemCard/itemCard.module.css
+++ b/components/itemCard/itemCard.module.css
@@ -10,10 +10,7 @@
 }
 
 .itemCardImage {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
+  border-radius: 3px;
 
   width: 200px;
   height: 200px;
@@ -27,12 +24,15 @@
 
   text-align: center;
 
+  height: 50px;
+
   font-size: 18px;
 }
 
 .itemCardButton {
   grid-row: 3;
 
+  height: 50px;
   width: 100%;
 
   padding-block: 5px;
