--- a/components/itemCard/itemCard.module.css
+++ b/components/itemCard/itemCard.module.css
@@ -24,7 +24,7 @@
 
   text-align: center;
 
-  height: 50px;
+  height: 30px;
 
   font-size: 18px;
 }
@@ -40,5 +40,6 @@
   background-color: black;
 
   text-align: center;
-  color: white
+  color: white;
+  font-weight: 100;
 }
