1 file modified, 1 added, 1 deleted

--- a/components/home/heroSection/heroSection.module.css
+++ b/components/home/heroSection/heroSection.module.css
@@ -1,5 +1,5 @@
 .heroSection {
   width: 100%;
 
-  background-image: url();
+  background-image: url("/home/heroSection/heroSectionBackground.jpg");
 }
