--- a/components/home/heroSection/heroSection.module.css
+++ b/components/home/heroSection/heroSection.module.css
@@ -1,5 +1,8 @@
 .heroSection {
   width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   background-image: url("/home/heroSection/heroSectionBackground.jpg");
 }
