--- a/components/home/heroSection/heroSection.module.css
+++ b/components/home/heroSection/heroSection.module.css
@@ -4,5 +4,5 @@
 
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: black;
+  background-image: url('./files/heroSectionBackground.jpg');
 }
