1 file modified, 1 added, 1 deleted

--- a/components/home/heroSection/heroSection.module.css
+++ b/components/home/heroSection/heroSection.module.css
@@ -4,5 +4,5 @@
 
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('./files/heroSectionBackground.jpg');
+  background-image: url('/home/heroSection/heroSectionBackground.jpg');
 }
