1 file modified, 1 deleted

--- a/components/home/heroSection/heroSection.module.css
+++ b/components/home/heroSection/heroSection.module.css
@@ -4,5 +4,5 @@
 
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('./files/heroSectionBackground.jpg');
+  background-image: url('https://firebasestorage.googleapis.com/v0/b/natuvas-store.appspot.com/o/heroSectionBackground.jpg?alt=media&token=db87e722-7506-46ee-9942-86d320dcb8ba');
 }
