--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,13 @@ html {
 button:hover {
   cursor: pointer;
 }
+
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  overflow: auto;
+}
