--- a/components/home/navigationBar/navigationBar.module.css
+++ b/components/home/navigationBar/navigationBar.module.css
@@ -1,12 +1,11 @@
 .navigationBar {
-  width: 100%;
+  width: 100% - 20px;
   height: 50px;
   
   background-color: black;
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
 
   padding-inline: 20px;
 }
