--- a/components/home/welcomeSection/welcomeSection.module.css
+++ b/components/home/welcomeSection/welcomeSection.module.css
@@ -1,6 +1,7 @@
 .welcomeSection {
   width: 100%;
-  height: 50vh;
+
+  margin-block: 100px;
 
   background-color: black;
 }
@@ -11,5 +12,11 @@
   font-weight: 500;
 
   padding-left: 20%;
-  padding-top: 100px;
+}
+
+.welcomeSectionParagraph {
+  color: white;
+
+  padding-right: 20%;
+  padding-left: 30%;
 }
