--- a/components/home/featuredSection/featuredSection.module.css
+++ b/components/home/featuredSection/featuredSection.module.css
@@ -14,6 +14,10 @@
   padding-top: 40px;
 }
 
-.p {
-  color: black;
+.featuredSectionItemsContainer {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
