--- a/components/home/featuredSection/itemCard/itemCard.module.css
+++ b/components/home/featuredSection/itemCard/itemCard.module.css
@@ -17,6 +17,8 @@
   background-position: center;
 
   border-radius: 3px;
+
+  transition: forward 100ms ease-in-out;
 }
 .itemCard:hover .itemCardImage {
   background-size: 120%;
